Update schema and settings endpoints to allow for regional settings
